update and added templates

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	
+	<link rel="stylesheet" type="text/css" href="/node_modules/mocha/mocha.css">
 	<style>
 		.toad-message, #main {
 			display: none;
